# ME433

HW10/: # HW10 - Potentiometer Bar Visualization.py  CMakeLists.txt  HW10.c
HW12/: main.c
HW14/: CMakeLists.txt  HW14.c  HW14_force_sensor.py
HW2_/: CMakeLists.txt  HW2_.c  code.py
HW3/: CMakeLists.txt  HW3.c
HW4/: CMakeLists.txt  HW4.c  IMG_8588.mov  font.h  ssd1306.c  ssd1306.h
HW4/.claude/: settings.local.json
HW5/: CMakeLists.txt  HW5.c  font.h  ssd1306.c  ssd1306.h
HW6/: CMakeLists.txt  HW6.c  mpu6050.c  mpu6050.h  usb_descriptors.c
HW7/: CMakeLists.txt  HW7.c
HW8./: CMakeLists.txt  HW8..c  IMG_8598.HEIC
HW9/: hw9_fft.py  hw9_fir.py  hw9_iir.py  hw9_maf.py
